eks/ui/deployments.yaml
apiVersion: apps/V1
kind: Deployment
metadata:
  name: ui-deploy
  labels: 
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      env: prod
      setup: ui
  template:
    metadata:
      labels:
        env: prod
        setup: ui
    spec:
      containers:
        - name: ui
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
