eks/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: famousdots
  labels:
    env: "prod"
    setup: "ui"
spec:
  type: ClusterIP
  selector:
    env: "prod"
    setup: ui
  ports:
    - port: 80
      targetPort: 80
