eks/ui/uiingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingreee
  labels:
  namespace: famosdots
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: ui-famousdots.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service
            port: 
              number: 80
